src/App.css
/* ... */
#interestTitle{
  font-family: 'Bungee Shade', cursive;
  font-size: 40px;
  color: #06d6a0;
}

#educationTitle{
  font-family: 'Bungee Shade', cursive;
  font-size: 40px;
  color: #06d6a0;
}

.interestList{ 
  font-family: 'Bungee Inline', cursive;
  text-align: center;
  font-size: 20px;
  list-style-type: none;
}
.interestList li{
  margin: 15px

}

.disabledIcon{
  pointer-events: none;
}

.contactMe{
  color:white;
  padding-bottom: 20px;;
  margin-top: 50px;
  height:300px;
  background-color: #06d6a0;
}

#contactMeTitle{
  padding-top: 100px;
  padding-bottom: 50px;
  font-size: 70px;
  text-shadow: 2px 2px black;
  color: #ffa62b;
  font-family: 'Bungee Shade', cursive;
}






#projectTitle{
  padding-top: 50px;
  color: white;
  font-size: 40px;
  text-shadow: 1px 1px #3c6e71;
  font-family: 'Bungee Shade', cursive;
  transform: skewY(11deg);

}

#youtubeDesc{
font-family: 'Bungee Inline', cursive;
text-shadow: 1px 1px black;
color:white;
font-size: 20px;
padding-bottom: 30px;
transform: skewY(11deg);
}



.videoContainer{
  padding-top: 10px;
  width:600px;
  height:400px;
  margin: auto;
  transform: skewY(11deg);
}

.Footer{
  padding-top: 30px;
  width: 100%;
  color:  white;
  background-color: black;
  text-align: center;
  margin-right: 10px;
  text-shadow: 2px 2px black;
}
.scrollHelper{
  transform: skewY(11deg);
}
.currentProject{
  background-color: #118ab2;
  transform: skewY(-11deg);
  height: 650px;
  margin-top: 100px;
  margin-bottom: 50px;
  border-radius: 10px;
  box-shadow: 10px 10px 10px 10px rgb,a(0, 0, 0, 0.4) 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
.rubberband{
  transform: skewY(11deg);
}
.currentProjectTitle{
  font-family: 'Bungee Shade', cursive;
  font-size: 40px;
  transform: skewY(11deg);
  padding-top: 100px;
  margin-left: 200px;
  margin-right: 200px;
  padding-bottom: 5px;
  color:white;
  text-shadow: 1px 1px black;
}

.currentProjectDesc{
  font-family: 'Bungee Inline', cursive;
  color: white;
  font-weight: bold;
  font-size: 20px;
  margin-left: 100px;
  margin-right: 100px;
  padding-bottom: 30px;
  text-shadow: 1px 1px black;
}

.deployedAppsContainer{
  width:800px;
  margin: auto;
}

.deployedApps{
  height:400px;
  width: 100%;
  background-color: white;
  margin-bottom: 20px;
}

.deployedAppsTitle{
  font-family: 'Bungee Shade', cursive;
  padding-top: 150px;
  color: white;
  font-size: 40px;
  text-shadow: 1px 1px #3c6e71;
  
}

.deployedApp:hover {
    filter: brightness(120%)
  }


.deployedAppImg{
  height: 300px;
  width: 600px;
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}





.deployedAppsDesc{
  color:white;
  text-shadow: 2px 2px black;
  padding-bottom: 50px;
  font-size: 20px;
  font-family: 'Bungee Inline', cursive;

}
.deployedAppDesc{
  font-family: 'Bungee Inline', cursive;

}

#wtwTitle{
  font-family: 'Bungee Outline', cursive;
  padding-top: 20px;
  font-size: 35px;
  color: #118ab2;

}

#if2Title{
  font-family: 'Bungee Outline', cursive;
  padding-top: 20px;
  color: #ffd166;
  font-size: 35px;

}

#ccTitle{
  font-family: 'Bungee Outline', cursive;
  padding-top: 20px;
  color: #ef476f;
  font-size: 35px;
}

.deployedAppDesc{
  color:white;
  font-size: 20px;
  padding-bottom: 60px;
}

#projectsHeaderImageContainer{
  display: flex;
  align-items: center;
  background-color: black;
  padding-top: 30px;
}

#projectsHeaderImage{
  display: block;
  margin: auto;
}

.currentNumbersContainer{
  display: flex;
  width: 80%;
  margin: auto;
  margin-top: 50px;
  margin-bottom: 50px;

}
.projectScreen{
  background-color: white;
}
.currentNumber{
  margin: auto;
  text-align: center;
  width: 25%;
}

.currentNumberTitle{
  margin-bottom: 30px;
  font-size: 30px;
  font-family: 'Bangers', cursive;
}

.countingNumber{
  font-size: 50px;
  color:#118ab2;
  text-shadow: none;
  font-family: 'Bangers', cursive;
}

.currentNumberIcon{
  color: black;
  pointer-events: none
}

#githubSquareIcon{
  color: #9b5de5
}

#githubAlternateIcon{
  color: #f15bb5
}

#folderIcon{
  color: #fee440
}

#coffeeIcon{
  color: #b2967d
}


.screenTitle{
  text-align: center;
  font-family: 'Bungee Shade', cursive;
  font-size: 70px;
  color:#06d6a0;
  padding-bottom: 20px;
}

.socialMediaNavBarContainer{
  height: 165px;
}

.projectContainer{
  text-align: center;
  font-size: 15px;
  font-family: 'Bungee Inline', cursive;
}

.projectContainerFlexbox{
  display: flex;
  width: 80%;
  justify-content: center;
  margin: auto
}

.projectContainerTitle{
 padding-top: 20px;
 padding-bottom: 20px;
 font-family: 'Bungee Shade', cursive;
 font-size: 35px;
}

.projectContainerHeader{
  font-family: 'Bungee Inline', cursive;
  font-size: 25px;
}

.projectImageSS{
  width: 90%;
  height: 300px;
  display: block;
  margin: auto;
  box-shadow: 2px 2px 11px black;

}

.projectImageSSContainer{
  width: 50%; 

}

.projectDescriptionContainer{
  width: 50%;
  text-align: center;
}

.accessContainer{
  text-align: left;
  margin: auto;
  width:120px;
}


.technologiesList{
  margin-bottom: 20px;
  pointer-events: none;
}

.technologiesList li{
  display: inline;
  position: relative;
  margin: 15px;
  font-size: 15px;
}

.projectContainerDescription{
  text-align: left;
}

#blogHeaderImage{
  width: 60%;
  height: 300px;
  display: block;
  margin: auto;
  border-radius: 10px;
  margin-top: 50px;
}

#blogHeaderImageContainer{
  background-color: white;
}

.all-blog-container{
  height: 100%;
  background-color: white;
  padding-bottom: 50px;
}

.blog-flexbox-container{
  display: flex;
  justify-content: center;
  width: 90%;
  margin: auto;
}

.blog-card{
  box-shadow: 2px 2px 11px black;
  margin: 15px;
  width: 30%;
  height: 300px;
 
}

.aboutScreen{
  height: 400px;
  background-color: black;
}

.blog-card-image{
  width:100%;
  height: 100%;
}

.blog-card:hover{
  box-shadow: 2px 2px 11px red;
}

.contactScreen{
  background-color: black;
  height:900px;
  text-align: center;
}
/* ... */

